Add proposed plan changes
